# pslib

./: .gitignore
cpp/fel/: CMakeLists.txt  functions.h  hw00.c  in_out.c  main.cpp  std_in.c  test_formating.c
cpp/fel/C_programming/projects/: main.c
cpp/fel/C_programming/projects/02/: dollars.c  loan.c  polynom.c  polynom_ext.c  sphere.c  sphere_plus.c  stars.c  tax.c
cpp/fel/C_programming/projects/03/: 03.c  03.h  books.c  books.h  dates.c  main.c  numbers.c  products.c
cpp/fel/HW01/b3b36prg-hw01/: main.c  readme.md
cpp/fel/HW01/b3b36prg-hw01/data/: test_all.sh
cpp/fel/HW01/b3b36prg-hw01/old_tests/: DECIMAL_3.txt  ERROR_HOUSE_DIM_OUT_OF_RANGE_1.txt  ERROR_WRONG_INPUT_1.txt  ERROR_WRONG_INPUT_2.txt  example_2.txt  example_5.txt  example_6.txt  test_all.sh
cpp/fel/HW01/b3b36prg-hw01/tests/: DECIMAL_1.txt  DECIMAL_2.txt  ERROR_HOUSE_WIDTH_IS_NOT_ODD_2.txt  ERROR_WRONG_INPUT_3.txt  NEGATIVE_ZERO_1.txt  NEGATIVE_ZERO_2.txt  NO_ERROR_1.txt  NO_ERROR_2.txt  NO_ERROR_HEX_1.txt  NO_ERROR_OCT_1.txt  test_all.sh
cpp/fel/HW02/b3b36prg-hw02/: erat_sieve.c  erat_sieve.h  main.c  readme.md
cpp/fel/HW02/b3b36prg-hw02/data/: test_all.sh
cpp/fel/HW03/b3b36prg-hw03/: main.c
cpp/fel/HW04/b3b36prg-hw04/: grep.c
cpp/fel/HW05/b3b36prg-hw05/: Makefile  main.c
cpp/fel/HW06/b3b36prg-hw06/: queue.c  queue.h
cpp/fel/HW06/sample/: cirque.c  cirque.h  main.c
cpp/fel/HW07/b3b36prg-hw07/: linked_list.c  linked_list.h
cpp/fel/b3b36prg-lec01-codes/: scanf.c
cpp/fel/hw/: priklad.txt
cpp/fel/misc/: hw00.c  i_vs_d.c  std_out_err.c  test_formating.c  test_pointers.c
(+332 files in other folders)
